Refs #107236; Updated Reportek API with the following changes: - Deprecated status, statusDate, statusDateStart, statusDateEnd in favor of   activity, activityDate, activityDateStart and activityDateEnd - Added activityStatus
